// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameBoxBig Matches snapshot 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="card card"
  >
    <a
      class="imagePosition"
      href="/app/game/123"
    >
      <img
        alt="Test game"
        class="image rounded-start"
        data-nimg="1"
        decoding="async"
        height="250"
        loading="lazy"
        src="testimage"
        style="color: transparent;"
        width="250"
      />
    </a>
    <div
      class="info"
    >
      <div
        class="container"
      >
        <h3
          class="value"
        >
          3.8
        </h3>
        <small
          class="label"
        >
          Attributes.Weight
        </small>
      </div>
      <hr
        class="metricDivider"
      />
      <div
        class="container"
      >
        <h3
          class="value"
        >
          120
        </h3>
        <small
          class="label"
        >
          Attributes.PlayingTime
        </small>
      </div>
      <hr
        class="metricDivider"
      />
      <div
        class="container"
      >
        <h3
          class="value"
        >
          1-5
        </h3>
        <small
          class="label"
        >
          Attributes.Players
        </small>
      </div>
    </div>
    <h2
      class="name"
    >
      <a
        href="/app/game/123"
      >
        Test game
      </a>
    </h2>
    <div
      class="myStatusOwn"
    >
      <button
        aria-label="States.NotOwn"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: color-mix(in srgb, var(--color-collection-own), transparent 88%); --ai-color: var(--color-collection-own); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-box-seam-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.Own
      </div>
    </div>
    <div
      class="friendStatusOwn"
      data-testid="friends-Own"
      tabindex="0"
    >
      <div
        class="container sm"
      >
        <div
          class="additional"
        >
          +
          6
        </div>
        Avatar
        Avatar
        Avatar
        Avatar
      </div>
      <div
        class="statusText"
      >
        FriendStates.Own
      </div>
    </div>
    <div
      class="myStatusWantToPlay"
    >
      <button
        aria-label="States.NotWantToPlay"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: color-mix(in srgb, var(--color-collection-want-to-play), transparent 88%); --ai-color: var(--color-collection-want-to-play); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-dice-3-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.WantToPlay
      </div>
    </div>
    <div
      class="friendStatusWantToPlay"
      data-testid="friends-WantToPlay"
      tabindex="0"
    >
      <div
        class="container sm"
      >
        <div
          class="additional"
        >
          +
          6
        </div>
        Avatar
        Avatar
        Avatar
        Avatar
      </div>
      <div
        class="statusText"
      >
        FriendStates.WantToPlay
      </div>
    </div>
    <div
      class="myStatusWishlist"
    >
      <button
        aria-label="States.NotWishlist"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: color-mix(in srgb, var(--color-collection-wishlist), transparent 88%); --ai-color: var(--color-collection-wishlist); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-gift-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.Wishlist
      </div>
    </div>
    <div
      class="friendStatusWishlist"
      data-testid="friends-Wishlist"
      tabindex="0"
    >
      <div
        class="container sm"
      >
        <div
          class="additional"
        >
          +
          6
        </div>
        Avatar
        Avatar
        Avatar
        Avatar
      </div>
      <div
        class="statusText"
      >
        FriendStates.Wishlist
      </div>
    </div>
  </div>
</div>
`;

exports[`GameBoxBig Matches snapshot for precise weight: default game 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="card card"
  >
    <a
      class="imagePosition"
      href="/app/game/123"
    >
      <img
        alt="Test game"
        class="image rounded-start"
        data-nimg="1"
        decoding="async"
        height="250"
        loading="lazy"
        src="testimage"
        style="color: transparent;"
        width="250"
      />
    </a>
    <div
      class="info"
    >
      <div
        class="container"
      >
        <h3
          class="value"
        >
          3.1
        </h3>
        <small
          class="label"
        >
          Attributes.Weight
        </small>
      </div>
      <hr
        class="metricDivider"
      />
      <div
        class="container"
      >
        <h3
          class="value"
        >
          120
        </h3>
        <small
          class="label"
        >
          Attributes.PlayingTime
        </small>
      </div>
      <hr
        class="metricDivider"
      />
      <div
        class="container"
      >
        <h3
          class="value"
        >
          1-5
        </h3>
        <small
          class="label"
        >
          Attributes.Players
        </small>
      </div>
    </div>
    <h2
      class="name"
    >
      <a
        href="/app/game/123"
      >
        Test game
      </a>
    </h2>
    <div
      class="myStatusOwn"
    >
      <button
        aria-label="States.Own"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-box-seam-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.NotOwn
      </div>
    </div>
    <div
      class="myStatusWantToPlay"
    >
      <button
        aria-label="States.WantToPlay"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-dice-3-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.NotWantToPlay
      </div>
    </div>
    <div
      class="myStatusWishlist"
    >
      <button
        aria-label="States.Wishlist"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-gift-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.NotWishlist
      </div>
    </div>
  </div>
</div>
`;

exports[`GameBoxBig Matches snapshot when not in collection: default game 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="card card"
  >
    <a
      class="imagePosition"
      href="/app/game/123"
    >
      <img
        alt="Test game"
        class="image rounded-start"
        data-nimg="1"
        decoding="async"
        height="250"
        loading="lazy"
        src="testimage"
        style="color: transparent;"
        width="250"
      />
    </a>
    <div
      class="info"
    >
      <div
        class="container"
      >
        <h3
          class="value"
        >
          3.8
        </h3>
        <small
          class="label"
        >
          Attributes.Weight
        </small>
      </div>
      <hr
        class="metricDivider"
      />
      <div
        class="container"
      >
        <h3
          class="value"
        >
          120
        </h3>
        <small
          class="label"
        >
          Attributes.PlayingTime
        </small>
      </div>
      <hr
        class="metricDivider"
      />
      <div
        class="container"
      >
        <h3
          class="value"
        >
          1-5
        </h3>
        <small
          class="label"
        >
          Attributes.Players
        </small>
      </div>
    </div>
    <h2
      class="name"
    >
      <a
        href="/app/game/123"
      >
        Test game
      </a>
    </h2>
    <div
      class="myStatusOwn"
    >
      <button
        aria-label="States.Own"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-box-seam-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.NotOwn
      </div>
    </div>
    <div
      class="myStatusWantToPlay"
    >
      <button
        aria-label="States.WantToPlay"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-dice-3-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.NotWantToPlay
      </div>
    </div>
    <div
      class="myStatusWishlist"
    >
      <button
        aria-label="States.Wishlist"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-gift-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.NotWishlist
      </div>
    </div>
  </div>
</div>
`;

exports[`GameBoxBig Matches snapshot without friend collection 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="card card"
  >
    <a
      class="imagePosition"
      href="/app/game/123"
    >
      <img
        alt="Test game"
        class="image rounded-start"
        data-nimg="1"
        decoding="async"
        height="250"
        loading="lazy"
        src="testimage"
        style="color: transparent;"
        width="250"
      />
    </a>
    <div
      class="info"
    >
      <div
        class="container"
      >
        <h3
          class="value"
        >
          3.8
        </h3>
        <small
          class="label"
        >
          Attributes.Weight
        </small>
      </div>
      <hr
        class="metricDivider"
      />
      <div
        class="container"
      >
        <h3
          class="value"
        >
          120
        </h3>
        <small
          class="label"
        >
          Attributes.PlayingTime
        </small>
      </div>
      <hr
        class="metricDivider"
      />
      <div
        class="container"
      >
        <h3
          class="value"
        >
          1-5
        </h3>
        <small
          class="label"
        >
          Attributes.Players
        </small>
      </div>
    </div>
    <h2
      class="name"
    >
      <a
        href="/app/game/123"
      >
        Test game
      </a>
    </h2>
    <div
      class="myStatusOwn"
    >
      <button
        aria-label="States.NotOwn"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: color-mix(in srgb, var(--color-collection-own), transparent 88%); --ai-color: var(--color-collection-own); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-box-seam-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.Own
      </div>
    </div>
    <div
      class="friendStatusOwn"
      data-testid="friends-Own"
      tabindex="0"
    >
      <div
        class="container sm"
      >
        <div
          class="additional"
        >
          +
          6
        </div>
        Avatar
        Avatar
        Avatar
        Avatar
      </div>
      <div
        class="statusText"
      >
        FriendStates.Own
      </div>
    </div>
    <div
      class="myStatusWantToPlay"
    >
      <button
        aria-label="States.NotWantToPlay"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: color-mix(in srgb, var(--color-collection-want-to-play), transparent 88%); --ai-color: var(--color-collection-want-to-play); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-dice-3-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.WantToPlay
      </div>
    </div>
    <div
      class="friendStatusWantToPlay"
      data-testid="friends-WantToPlay"
      tabindex="0"
    >
      <div
        class="container sm"
      >
        <div
          class="additional"
        >
          +
          6
        </div>
        Avatar
        Avatar
        Avatar
        Avatar
      </div>
      <div
        class="statusText"
      >
        FriendStates.WantToPlay
      </div>
    </div>
    <div
      class="myStatusWishlist"
    >
      <button
        aria-label="States.NotWishlist"
        class="mantine-focus-auto mantine-active button m_8d3f4000 mantine-ActionIcon-root m_87cf2631 mantine-UnstyledButton-root"
        data-size="xl"
        data-variant="subtle"
        style="--ai-size: var(--ai-size-xl); --ai-bg: transparent; --ai-hover: color-mix(in srgb, var(--color-collection-wishlist), transparent 88%); --ai-color: var(--color-collection-wishlist); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        tabindex="0"
        type="button"
      >
        <span
          class="m_8d3afb97 mantine-ActionIcon-icon"
        >
          <i
            class="bi bi-gift-fill"
          />
        </span>
      </button>
      <div
        class="statusText"
      >
        States.Wishlist
      </div>
    </div>
    <div
      class="friendStatusWishlist"
      data-testid="friends-Wishlist"
      tabindex="0"
    >
      <div
        class="container sm"
      >
        <div
          class="additional"
        >
          +
          6
        </div>
        Avatar
        Avatar
        Avatar
        Avatar
      </div>
      <div
        class="statusText"
      >
        FriendStates.Wishlist
      </div>
    </div>
  </div>
</div>
`;
